# epic-awesome-gamer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.worker  README.md  docker-compose.yml  main.py  pyproject.toml  worker.py
.github/workflows/: epic-gamer.yml
app/: deploy.py  settings.py  utils.py
app/services/: epic_authorization_service.py  epic_games_service.py
app/services/captcha/: __init__.py  solver.py
docker/: .env  docker-compose.yaml
docs/: API_KEY_GUIDE.md  MODEL_CONFIG.md  QUICKSTART.md
scripts/: siliconflow_model_benchmark.py
templates/: index.html
tests/: test_checkout_results.py  test_security_queue.py  test_worker_results.py
